--- a/aws/jira-test/Jenkinsfile
+++ b/aws/jira-test/Jenkinsfile
@@ -52,7 +52,7 @@ pipeline {
             steps { 
                 script {
                     try {
-                        dir('jira') {
+                        dir('jiratest') {
                             sh "make image"
                          }
                     } catch (Exception e) {
@@ -67,7 +67,7 @@ pipeline {
             steps { 
                 script {
                     try {
-                        dir('jira') {
+                        dir('jiratest') {
                             echo "To Do implement this"
                         }
                     } catch (Exception e) {
@@ -82,7 +82,7 @@ pipeline {
             steps {
                 script { 
                         try {
-                                dir('jira') {
+                                dir('jiratest') {
                                         //sh("eval \$(aws ecr get-login --no-include-email --region us-east-1 | sed 's|https://||')")
                                         sh 'docker login -u papu -p jaya8668'
                                         sh "make publish"
@@ -114,9 +114,9 @@ pipeline {
                 script {
                     if(isDev == 'true') {
                         try {
-                            dir('aws/jira') {
+                            dir('aws/jiratest') {
                                 withCredentials([[$class: 'AmazonWebServicesCredentialsBinding', credentialsId: 'synectiks-dev']]) { 
-                                    sh "sceptre --dir deployment/ launch-stack dev jiraservice"
+                                    sh "sceptre --dir deployment/ launch-stack dev jiratestservice"
                                 }
                             }
                         } catch (Exception e) {
@@ -133,9 +133,9 @@ pipeline {
                 script {
                     if(isTest == 'true') {
                         try {
-                            dir('aws/jira') {
+                            dir('aws/jiratest') {
                                 withCredentials([[$class: 'AmazonWebServicesCredentialsBinding', credentialsId: 'synectiks-test']]) {                                    
-                                    sh "sceptre --dir deployment/ launch-stack test jiraservice"
+                                    sh "sceptre --dir deployment/ launch-stack test jiratestservice"
                                 }
                             }                           
                         } catch (Exception e) {
@@ -164,9 +164,9 @@ pipeline {
                     echo "Deploying in Stage" 
                     if(isStage == 'true') {
                         try {
-                            dir('aws/jira') {
+                            dir('aws/jiratest') {
                                 withCredentials([[$class: 'AmazonWebServicesCredentialsBinding', credentialsId: 'synectiks-stage']]) {                                    
-                                    sh "sceptre --dir deployment/ launch-stack stage jiraservice"
+                                    sh "sceptre --dir deployment/ launch-stack stage jiratestservice"
                                 }
                             }                           
                         } catch (Exception e) {
@@ -195,9 +195,9 @@ pipeline {
                 script {
                     if(isProd == 'true') {
                         try {
-                            dir('aws/jira') {
+                            dir('aws/jiratest') {
                                 withCredentials([[$class: 'AmazonWebServicesCredentialsBinding', credentialsId: 'synectiks-prod']]) {                                    
-                                    sh "sceptre --dir deployment/ launch-stack prod jiraservice"
+                                    sh "sceptre --dir deployment/ launch-stack prod jiratestservice"
                                 }
                             }                             
                         } catch (Exception e) {
