--- a/aws/eskaysoftAPI/deployment/config/test/eskaysoftAPI.yaml
+++ b/aws/eskaysoftAPI/deployment/config/test/eskaysoftAPI.yaml
@@ -6,7 +6,7 @@ parameters:
   Cluster: !stack_output ecscluster::Cluster
   Listener: !stack_output loadbalancer::Listener
   LoadbalancerUrl:  !stack_output loadbalancer::LoadBalancerUrl
-  DBHost:  !stack_output rds::MasterHosturl
-  DBUser: root
-  DBPassword: password
-  UploadDir: /opt/data
+  DBHost:  !stack_output rds::DbUrl
+  DBUser: postgres
+  DBPassword: postgres
+  DBJdbcUrl: !stack_output rds::JDBCConnectionStringPrefix
