--- a/aws/vdmscluster/deployment/config/ops/backbone.yaml
+++ b/aws/vdmscluster/deployment/config/ops/backbone.yaml
@@ -1,7 +1,7 @@
 template_path: templates/backbone.json
 
 parameters:
-  ProductName: opscluster
+  ProductName: vdmscluster
   EnvironmentName: ops
   VpcCIDR: 10.0.0.0/16
   PublicSubnet1CIDR: 10.0.10.0/24
