--- a/aws/synectikserp/Jenkinsfile
+++ b/aws/synectikserp/Jenkinsfile
@@ -5,7 +5,7 @@ pipeline {
     }
     agent any
     environment { 
-        IMAGE_NAME  = 'synectiks-nexus'
+        IMAGE_NAME  = 'erp-service'
         REGISTRY =  'papu'
         VERSION = 'latest'
     }
@@ -52,8 +52,9 @@ pipeline {
             steps { 
                 script {
                     try {
-                        dir('nexus') {
-                            sh "make image"
+                        dir('erp') {
+                            //sh "make image"
+                            echo "do later"
                          }
                     } catch (Exception e) {
                         currentBuild.result = "FAILURE"
@@ -67,7 +68,7 @@ pipeline {
             steps { 
                 script {
                     try {
-                        dir('nexus') {
+                        dir('erp') {
                             echo "To Do implement this"
                         }
                     } catch (Exception e) {
@@ -82,10 +83,11 @@ pipeline {
             steps {
                 script { 
                         try {
-                                dir('nexus') {
+                                dir('erp') {
                                         //sh("eval \$(aws ecr get-login --no-include-email --region us-east-1 | sed 's|https://||')")
-                                        sh 'docker login -u papu -p jaya8668'
-                                        sh "make publish"
+                                        // sh 'docker login -u papu -p jaya8668'
+                                        // sh "make publish"
+                                        echo "To Do implement this"
                                  }
                         } catch (Exception e) {
                         currentBuild.result = "FAILURE"
@@ -114,9 +116,9 @@ pipeline {
                 script {
                     if(isDev == 'true') {
                         try {
-                            dir('aws/nexus') {
+                            dir('aws/synectikserp') {
                                 withCredentials([[$class: 'AmazonWebServicesCredentialsBinding', credentialsId: 'synectiks-dev']]) { 
-                                    sh "sceptre --dir deployment/ launch-stack dev nexus"
+                                    sh "sceptre --dir deployment/ launch-stack dev erp"
                                 }
                             }
                         } catch (Exception e) {
@@ -133,9 +135,9 @@ pipeline {
                 script {
                     if(isTest == 'true') {
                         try {
-                            dir('aws/nexus') {
+                            dir('aws/synectikserp') {
                                 withCredentials([[$class: 'AmazonWebServicesCredentialsBinding', credentialsId: 'synectiks-test']]) {                                    
-                                    sh "sceptre --dir deployment/ launch-stack test nexus"
+                                    sh "sceptre --dir deployment/ launch-stack test erp"
                                 }
                             }                           
                         } catch (Exception e) {
@@ -164,9 +166,9 @@ pipeline {
                     echo "Deploying in Stage" 
                     if(isStage == 'true') {
                         try {
-                            dir('aws/nexus') {
+                            dir('aws/synectikserp') {
                                 withCredentials([[$class: 'AmazonWebServicesCredentialsBinding', credentialsId: 'synectiks-stage']]) {                                    
-                                    sh "sceptre --dir deployment/ launch-stack stage nexus"
+                                    sh "sceptre --dir deployment/ launch-stack stage erp"
                                 }
                             }                           
                         } catch (Exception e) {
@@ -195,9 +197,9 @@ pipeline {
                 script {
                     if(isProd == 'true') {
                         try {
-                            dir('aws/nexus') {
+                            dir('aws/synectikserp') {
                                 withCredentials([[$class: 'AmazonWebServicesCredentialsBinding', credentialsId: 'synectiks-prod']]) {                                    
-                                    sh "sceptre --dir deployment/ launch-stack prod nexus"
+                                    sh "sceptre --dir deployment/ launch-stack prod erp"
                                 }
                             }                             
                         } catch (Exception e) {
