--- a/aws/synectikserp/deployment/config/dev/erp.yaml
+++ b/aws/synectikserp/deployment/config/dev/erp.yaml
@@ -6,3 +6,7 @@ parameters:
   Cluster: !stack_output ecscluster::Cluster
   Listener: !stack_output loadbalancer::Listener
   LoadbalancerUrl:  !stack_output loadbalancer::LoadBalancerUrl
+  DBHost:  !stack_output rds::DbUrl
+  DBUser: postgres
+  DBPassword: postgres
+  DBJdbcUrl: !stack_output rds::JDBCConnectionStringPrefix
