Changed git url in eskaysobdb jenkinsfile

--- a/aws/eskaysoftdb/Jenkinsfile
+++ b/aws/eskaysoftdb/Jenkinsfile
@@ -23,7 +23,7 @@ pipeline {
             steps { 
                 script {
                     try {
-                        git url: 'https://github.com/xformation/docker-builders.git'
+                        git url: 'https://github.com/synectiks/eskaysoftAPI-v1.git'
                     } catch (Exception e) {
                         currentBuild.result = "FAILURE"
                         step([$class: 'InfluxDbPublisher', customData: null, customDataMap: null, customPrefix: null, target: 'grafana'])
@@ -57,8 +57,7 @@ pipeline {
                 script {
                     try {
                         dir('eskaysoftdb') {
-                            //sh "make binary"
-                            echo "passed"
+                            sh "make binary"
                         }
                     } catch (Exception e) {
                         currentBuild.result = "FAILURE"
