some fixes in eskaysoftui jenkinsfile

--- a/aws/eskaysoftUI/Jenkinsfile
+++ b/aws/eskaysoftUI/Jenkinsfile
@@ -56,9 +56,10 @@ pipeline {
             steps { 
                 script {
                     try {
-                        dir('eskaysoftui')
+                        dir('eskaysoftui') {
                             //sh "make binary"
                             echo "passed"
+                        }
                     } catch (Exception e) {
                         currentBuild.result = "FAILURE"
                         step([$class: 'InfluxDbPublisher', customData: null, customDataMap: null, customPrefix: null, target: 'grafana'])
@@ -131,8 +132,9 @@ pipeline {
             steps { 
                 script {
                     try {
-                        dir('eskaysoftui')
+                        dir('eskaysoftui') {
                             sh "make image"
+                        }
                     } catch (Exception e) {
                         currentBuild.result = "FAILURE"
                         step([$class: 'InfluxDbPublisher', customData: null, customDataMap: null, customPrefix: null, target: 'grafana'])
@@ -145,7 +147,9 @@ pipeline {
             steps { 
                 script {
                     try {
+                        dir('eskaysoftui') {
                             echo "To Do implement this"
+                        }
                     } catch (Exception e) {
                         currentBuild.result = "FAILURE"
                         step([$class: 'InfluxDbPublisher', customData: null, customDataMap: null, customPrefix: null, target: 'grafana'])
@@ -158,11 +162,12 @@ pipeline {
             steps {
                 script { 
                         try {
+                            dir('eskaysoftui') {
                                 // withCredentials([[$class: 'AmazonWebServicesCredentialsBinding', credentialsId: 'synectiks-dev']]) {
                                         //sh("eval \$(aws ecr get-login --no-include-email --region us-east-1 | sed 's|https://||')")
                                         sh 'docker login -u papu -p jaya8668'
                                         sh "make publish"
-                            // }                           
+                                 }                           
                         } catch (Exception e) {
                         currentBuild.result = "FAILURE"
                         step([$class: 'InfluxDbPublisher', customData: null, customDataMap: null, customPrefix: null, target: 'grafana'])
