--- a/aws/eskaysoftUI/deployment/config/test/eskaysoftUI.yaml
+++ b/aws/eskaysoftUI/deployment/config/test/eskaysoftUI.yaml
@@ -1,4 +1,4 @@
-template_path: templates/eskaysoftUI.json
+template_path: templates/eskaysoftui.json
 parameters:
   ProductName: !stack_output backbone::ProductName
   EnvironmentName: !stack_output backbone::EnvironmentName
@@ -6,7 +6,3 @@ parameters:
   Cluster: !stack_output ecscluster::Cluster
   Listener: !stack_output loadbalancer::Listener
   LoadbalancerUrl:  !stack_output loadbalancer::LoadBalancerUrl
-  DBHost:  !stack_output rds::DbUrl
-  DBUser: postgres
-  DBPassword: postgres
-  DBJdbcUrl: !stack_output rds::JDBCConnectionStringPrefix
