--- a/aws/appclustermin/deployment/config/dev/backbone.yaml
+++ b/aws/appclustermin/deployment/config/dev/backbone.yaml
@@ -4,5 +4,7 @@ parameters:
   ProductName: appclustermin
   EnvironmentName: dev
   VpcCIDR: 10.0.0.0/16
-  PublicSubnetCIDR: 10.0.10.0/24
-  PrivateSubnetCIDR: 10.0.11.0/24
+  PublicSubnet1CIDR: 10.0.30.0/24
+  PublicSubnet2CIDR: 10.0.40.0/24
+  PrivateSubnet1CIDR: 10.0.31.0/24
+  PrivateSubnet2CIDR: 10.0.41.0/24
