--- a/aws/appclustermin/deployment/config/dev/efs.yaml
+++ b/aws/appclustermin/deployment/config/dev/efs.yaml
@@ -3,4 +3,5 @@ template_path: templates/efs.json
 parameters:
   EnvironmentName: !stack_output backbone::EnvironmentName
   VPC:  !stack_output backbone::VPC
-  PrivateSubnet: !stack_output backbone::PrivateSubnet
+  PrivateSubnet1: !stack_output backbone::PrivateSubnet1
+  PrivateSubnet2: !stack_output backbone::PrivateSubnet2
