--- a/aws/appclustermin/deployment/config/test/backbone.yaml
+++ b/aws/appclustermin/deployment/config/test/backbone.yaml
@@ -4,5 +4,7 @@ parameters:
   ProductName: appcluster
   EnvironmentName: dev
   VpcCIDR: 10.0.0.0/16
-  PublicSubnetCIDR: 10.0.10.0/24
-  PrivateSubnetCIDR: 10.0.11.0/24
+  PublicSubnet1CIDR: 10.0.10.0/24
+  PublicSubnet2CIDR: 10.0.20.0/24
+  PrivateSubnet1CIDR: 10.0.11.0/24
+  PrivateSubnet2CIDR: 10.0.21.0/24
