--- a/aws/vdmsclustermin/deployment/config/prod/backbone.yaml
+++ b/aws/vdmsclustermin/deployment/config/prod/backbone.yaml
@@ -1,7 +1,7 @@
 template_path: templates/backbone.json
 
 parameters:
-  ProductName: appclustermin
+  ProductName: appcluster
   EnvironmentName: dev
   VpcCIDR: 10.0.0.0/16
   PublicSubnet1CIDR: 10.0.10.0/24
