--- a/aws/argus-Production/deployment/config/rdg/rdgw.yaml
+++ b/aws/argus-Production/deployment/config/rdg/rdgw.yaml
@@ -10,7 +10,7 @@ parameters:
   # PrivateSubnet3CIDR: 172.16.5.0/24
   KeyPairName: testingserverkeypair
   DomainAdminPassword: Nhy6Mju7
-  VPCID: vpc-0d4dd67070467ba70
+  VPCID: !stack_output backbone::VPC #vpc-0d4dd67070467ba70
   RDGWCIDR: 0.0.0.0/0
   PublicSubnet1ID: subnet-0e7ddd689d30aedca
   DomainMemberSGID: sg-02caa2a98295da16d
