--- a/aws/argus-Production/deployment/config/dev/rdgw.yaml
+++ b/aws/argus-Production/deployment/config/dev/rdgw.yaml
@@ -6,7 +6,7 @@ parameters:
   VpcId: !stack_output backbone::VPC
   RDGWCIDR: 0.0.0.0/0
   PublicSubnet1ID: !stack_output backbone::PublicSubnet1
-  DomainMemberSGID: sg-0384ad238f1d1f746
+  DomainMemberSGID: !stack_output securitygroups::DomainMemberSGID
   PublicSubnet2ID: !stack_output backbone::PublicSubnet2
   PublicSubnet3ID: !stack_output backbone::PublicSubnet3
   QSS3BucketName: ocregistryoc
