--- a/aws/argus-Production/deployment/config/dev/vpn.yaml
+++ b/aws/argus-Production/deployment/config/dev/vpn.yaml
@@ -4,4 +4,5 @@ parameters:
   # ProductName: !stack_output backbone::ProductName
   VpcId:  !stack_output backbone::VPC
   # WhitelistIP: 0.0.0.0/0
-  IpAddress: 100.64.3.221
+  IpAddressUS: 100.64.3.221
+  IpAddressUK: 100.64.3.231
