--- a/aws/argus-Production/deployment/config/dev/rdgw.yaml
+++ b/aws/argus-Production/deployment/config/dev/rdgw.yaml
@@ -3,11 +3,12 @@ template_path: templates/rdgw.json
 parameters:
   KeyPairName: testingserverkeypair
   DomainAdminPassword: Nhy6Mju7
-  VpcId: vpc-0d4dd67070467ba70
+  VpcId: !stack_output backbone::VPC
   RDGWCIDR: 0.0.0.0/0
-  PublicSubnet1ID: subnet-0e7ddd689d30aedca
-  DomainMemberSGID: sg-02caa2a98295da16d
-  PublicSubnet2ID: subnet-0c9a3e1ffa14ccd2d
+  PublicSubnet1ID: !stack_output backbone::PublicSubnet1
+  DomainMemberSGID: !stack_output securitygroups::DomainMemberSGID
+  PublicSubnet2ID: !stack_output backbone::PublicSubnet2
+  PublicSubnet3ID: !stack_output backbone::PublicSubnet3
   QSS3BucketName: ocregistryoc
   DomainDNSName: scloud.com
   DomainNetBIOSName: SCLOUD
