--- a/aws/argus-Production/deployment/config/prod/terminal.yaml
+++ b/aws/argus-Production/deployment/config/prod/terminal.yaml
@@ -1,16 +1,16 @@
 template_path: templates/terminal.json
 
 parameters:
-  KeyPairName: testingserverkeypair
-  DomainAdminPassword: Nhy6Mju7
-  VPCID: vpc-0d4dd67070467ba70 #!stack_output backbone::VPC
-  TerminalCIDR: 0.0.0.0/0
-  PublicSubnet1ID:  subnet-0e7ddd689d30aedca #!stack_output backbone::PublicSubnet1
-  DomainMemberSGID: sg-02caa2a98295da16d #!stack_output securitygroups::DomainMemberSGID
-  PublicSubnet2ID: subnet-00a66c2491c74dc4a #!stack_output backbone::PublicSubnet2
-  # PublicSubnet3ID: subnet-0c9a3e1ffa14ccd2d #!stack_output backbone::PublicSubnet3
+  KeyPairName: argus-key
+  VpcId: !stack_output backbone::VPC
+  terminalCIDR: 0.0.0.0/0
+  PublicSubnet1ID: !stack_output backbone::PrivateSubnet1
+  DomainMemberSGID: !stack_output securitygroups::DomainMemberSGID
+  PublicSubnet2ID: !stack_output backbone::PrivateSubnet2
+  PublicSubnet3ID: !stack_output backbone::PrivateSubnet3
   QSS3BucketName: ocregistryoc
-  DomainDNSName: scloud.com
+  DomainDNSName: argusrg.com
   DomainNetBIOSName: ARGUSRG
-  DomainAdminUser: salam
+  DomainAdminUser: aws_service
+  DomainAdminPassword: 8293Kwr64jR%
   #QSS3KeyPrefix: quickstart-microsoft-utilities
