--- a/aws/argus-Production/deployment/config/prod/terminal.yaml
+++ b/aws/argus-Production/deployment/config/prod/terminal.yaml
@@ -1,7 +1,7 @@
 template_path: templates/terminal.json
 
 parameters:
-  KeyPairName: argus-key
+  KeyPairName: #Enter Key-pair name
   VpcId: !stack_output backbone::VPC
   terminalCIDR: 0.0.0.0/0
   PublicSubnet1ID: !stack_output backbone::PrivateSubnet1
@@ -9,8 +9,8 @@ parameters:
   PublicSubnet2ID: !stack_output backbone::PrivateSubnet2
   PublicSubnet3ID: !stack_output backbone::PrivateSubnet3
   QSS3BucketName: ocregistryoc
-  DomainDNSName: argusrg.com
-  DomainNetBIOSName: ARGUSRG
+  DomainDNSName: #Enter Domain name example.com
+  DomainNetBIOSName: #enter domain name --> EXAMPLE
   DomainAdminUser: #Domain user Name
   DomainAdminPassword: #Password
   #QSS3KeyPrefix: quickstart-microsoft-utilities
