--- a/aws/argus-Production/deployment/config/prod/vpn.yaml
+++ b/aws/argus-Production/deployment/config/prod/vpn.yaml
@@ -4,5 +4,5 @@
 #   # ProductName: !stack_output backbone::ProductName
 #   VpcId:  !stack_output backbone::VPC
 #   # WhitelistIP: 0.0.0.0/0
-#   IpAddressUS: 66.11.128.112
-#   IpAddressUK: 82.163.113.42
+#   IpAddressUS: <FireWall IP>
+#   IpAddressUK: <FireWall IP>
